Begin art page styling

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
   <link type="text/css" rel="stylesheet" href="js/vendor/lightGallery-1.6.12/css/lightgallery.min.css" />
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Khand&display=swap" rel="stylesheet"> -->
-  <link
-    href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Source+Sans+Pro&display=swap"
+  <link href="https://fonts.googleapis.com/css?family=Squada+One|Source+Code+Pro|Source+Sans+Pro&display=swap"
     rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
@@ -150,14 +149,66 @@
             CODE SQUARE CONTENTS
           ================ -->
       <div class="content-square-details">
-        <div class="container" id="code-content">
+        <div id="code-content">
+
+          <div class="center details-label">
+            Software + Games
+          </div>
+
           <div class="code-section websites-section">
             <div class="code-tab websites-section center">
               Websites
             </div>
 
             <div class="row">
-              <div class="col-3 code-image-container center">
+              <div class="col-4 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  <p>Bananium Labs</p>
+                </div>
+              </div>
+              <div class="col-4 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  <p>Title</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="code-section games-section">
+            <div class="code-tab games-section center">
+              Games
+            </div>
+
+            <div class="row">
+              <div class="col-4 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  <p>Bananium Labs</p>
+                </div>
+              </div>
+              <div class="col-4 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  <p>Title</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="code-section hackathons-section">
+            <div class="code-tab hackathons-section center">
+              Games
+            </div>
+
+            <div class="row">
+              <div class="col-4 code-image-container center">
+                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
+                <div class="code-hover">
+                  <p>Bananium Labs</p>
+                </div>
+              </div>
+              <div class="col-4 code-image-container center">
                 <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
                 <div class="code-hover">
                   <p>Title</p>
@@ -186,7 +237,7 @@
         ORG SQUARE CONTENTS
       ================ -->
       <div class="content-square-details">
-        <div id="org-label" class="center">
+        <div id="org-label" class="center details-label">
           Organizations
         </div>
         <div id="org-timeline">
@@ -256,18 +307,116 @@
         </div>
       </div>
 
-       <!-- ===============
+      <!-- ===============
         ART SQUARE CONTENTS
       ================ -->
       <div class="content-square-details">
-        <div class="lightgallery">
-          <a href="img/2tbs.png">
-            <img src="img/2tbs.png" />
-          </a>
-          <a href="img/bananium-icon.png">
-            <img src="img/bananium-icon.png" />
-          </a>
+        <div class="container">
+            <div class="details-label center white-text">
+              Art + Design
+            </div>
+            <div id="art-arch" class="art-box">
+              <div class="row">
+                <div class="col-4 center">
+                  <img class="timeline-image" src="img/2tbs.png">
+
+                  <div class="lightgallery">
+
+                    <button href="img/2tbs.png" data-src="img/2tbs.png" data-sub-html="Caption" class="org-button button-2tbs">View
+                      Gallery
+                      <img class="hidden" src="img/2tbs.png">
+                    </button>
+
+                    <div class="hidden gallery-item" data-src="img/bananium-icon.png" data-sub-html="Caption">
+                      <img src="img/bananium-icon.png">
+                    </div>
+                  </div>
+
+                  <a target="_blank" href="https://2tbs.bananiumlabs.com/">
+                    <button class="org-button button-2tbs">Visit Site</button>
+                  </a>
+                </div>
+                <div class="col-8">
+                  <div class="center timeline-title">Two Terabyte Studios</div>
+                  <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
+                    Donec ultricies, magna vitae pharetra
+                    congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
+                    turpis, et malesuada mi
+                    mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
+                    imperdiet velit id
+                    lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
+                    a nulla interdum
+                    rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
+                    metus aliquam a.
+                    Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
+                    Pellentesque vitae nulla
+                    tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+                </div>
+              </div>
+            </div>
+            <!-- <div class="lightgallery">
+              <a href="img/2tbs.png">
+                <img src="img/2tbs.png" />
+              </a>
+              <a href="img/bananium-icon.png">
+                <img src="img/bananium-icon.png" />
+              </a>
+            </div> -->
+          </div>
         </div>
+    </div>
+
+
+
+    <!-- ===============
+        CODE MODALS
+      ================ -->
+    <div id="code-modals">
+      <div class="code-modal websites-section center" id="img-mysite-modal">
+        <div class="close-modal-button">
+          <i class="fas fa-times"></i>
+        </div>
+        <div class="modal-title">Bananium Labs</div>
+        <div class="row">
+          <div class="col-6 center">
+            <img class="timeline-image rounded-image" src="img/code/bananium.png">
+
+            <div class="row">
+              <div class="col-6 center">
+                <a target="_blank" href="https://bananiumlabs.com/">
+                  <button class="org-button button-bananium">Visit Site</button>
+                </a>
+              </div>
+              <div class="col-6 center">
+                <a target="_blank" href="https://github.com/BananiumLabs/BananiumSite">
+                  <button class="org-button button-bananium">Source Code</button>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col-6">
+            <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
+              Donec ultricies, magna vitae pharetra
+              congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
+              turpis, et malesuada mi
+              mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
+              imperdiet velit id
+              lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
+              a nulla interdum
+              rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
+              metus aliquam a.
+              Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
+              Pellentesque vitae nulla
+              tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+    <div id="about-modal-container">
+      <div class="code-modal about-modal center">
+        <div class="modal-title">About Me</div>
       </div>
     </div>
 
@@ -292,57 +441,7 @@
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
 
-   <!-- ===============
-    CODE MODALS
-  ================ -->
-  <div id="code-modals">
-    <div class="code-modal websites-section center" id="img-mysite-modal">
-      <div class="close-modal-button">
-        <i class="fas fa-times"></i>
-      </div>
-      <div class="modal-title">Bananium Labs</div>
-      <div class="row">
-        <div class="col-6 center">
-          <img class="timeline-image rounded-image" src="img/code/bananium.png">
 
-          <div class="row">
-            <div class="col-6 center">
-              <a target="_blank" href="https://bananiumlabs.com/">
-                <button class="org-button button-bananium">Visit Site</button>
-              </a>
-            </div>
-            <div class="col-6 center">
-              <a target="_blank" href="https://github.com/BananiumLabs/BananiumSite">
-                <button class="org-button button-bananium">Source Code</button>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-6">
-          <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
-            Donec ultricies, magna vitae pharetra
-            congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
-            turpis, et malesuada mi
-            mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
-            imperdiet velit id
-            lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
-            a nulla interdum
-            rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
-            metus aliquam a.
-            Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
-            Pellentesque vitae nulla
-            tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
-        </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="about-modal-container">
-    <div class="code-modal about-modal center">
-      <div class="modal-title">About Me</div>
-    </div>
-  </div>
 
 
 </body>
