Add software content and images

--- a/index.html
+++ b/index.html
@@ -161,16 +161,28 @@
             </div>
 
             <div class="row">
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Bananium Labs</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/bananium-icon.png" id="img-bananium">
+                  <div class="code-hover">
+                    <p>Bananium Labs</p>
+                  </div>
                 </div>
               </div>
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Title</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/launchhacks-logo.png" id="img-launchhacks">
+                  <div class="code-hover">
+                    <p>LaunchHacks</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/2tbs.png" id="img-2tbs">
+                  <div class="code-hover">
+                    <p>2TBS</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -182,36 +194,86 @@
             </div>
 
             <div class="row">
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Bananium Labs</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/irtp.png" id="img-irtp">
+                  <div class="code-hover">
+                    <p>It's Rude To Point</p>
+                  </div>
                 </div>
               </div>
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Title</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/bullet-heaven.png" id="img-bullet">
+                  <div class="code-hover">
+                    <p>Bullet Heaven</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/atomblast.png" id="img-atomblast">
+                  <div class="code-hover">
+                    <p>AtomBlast</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div class="code-section hackathons-section">
             <div class="code-tab hackathons-section center">
-              Games
+              Hackathons
             </div>
 
             <div class="row">
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Bananium Labs</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/carrotcane.png" id="img-carrotcane">
+                  <div class="code-hover">
+                    <p>CarrotCane</p>
+                  </div>
                 </div>
               </div>
-              <div class="col-4 code-image-container center">
-                <img class="code-image" src="img/bananium-icon.png" id="img-mysite">
-                <div class="code-hover">
-                  <p>Title</p>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/AudiSea Logo.png" id="img-audisea">
+                  <div class="code-hover">
+                    <p>AudiSea</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/aegis-banner.jpg" id="img-aegis">
+                  <div class="code-hover">
+                    <p>Aegis</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/hotswap-mini.png" id="img-hotswap">
+                  <div class="code-hover">
+                    <p>HotSwap</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/honeydue.jpg" id="img-honeydue">
+                  <div class="code-hover">
+                    <p>Honeydue</p>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="code-image-container center">
+                  <img class="code-image" src="img/code/aspicio.jpg" id="img-aspicio">
+                  <div class="code-hover">
+                    <p>Aspicio</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -322,7 +384,7 @@
 
                   <div class="lightgallery">
 
-                    <button href="img/2tbs.png" data-src="img/2tbs.png" data-sub-html="Caption" class="org-button button-2tbs">View
+                    <button href="img/art/arch-1.png" data-src="img/2tbs.png" data-sub-html="Caption" class="org-button button-2tbs">View
                       Gallery
                       <img class="hidden" src="img/2tbs.png">
                     </button>
@@ -372,14 +434,14 @@
         CODE MODALS
       ================ -->
     <div id="code-modals">
-      <div class="code-modal websites-section center" id="img-mysite-modal">
+      <div class="code-modal websites-section center" id="img-bananium-modal">
         <div class="close-modal-button">
           <i class="fas fa-times"></i>
         </div>
         <div class="modal-title">Bananium Labs</div>
         <div class="row">
           <div class="col-6 center">
-            <img class="timeline-image rounded-image" src="img/code/bananium.png">
+            <img class="timeline-image rounded-image" src="img/code/bananium-site.png">
 
             <div class="row">
               <div class="col-6 center">
@@ -456,7 +518,7 @@
   <script src="js/vendor/smoothscroll.js"></script>
 
   <script src="js/vendor/lightGallery-1.6.12/js/lightgallery-all.min.js"></script>
-
+  <script type="text/javascript" src="js/vendor/jquery.lazy.min.js"></script>
   <script src="js/main.js"></script>
 </footer>
 
