--- a/index.html
+++ b/index.html
@@ -373,59 +373,113 @@
         ART SQUARE CONTENTS
       ================ -->
       <div class="content-square-details">
-        <div class="container">
-            <div class="details-label center white-text">
-              Art + Design
-            </div>
-            <div id="art-arch" class="art-box">
-              <div class="row">
-                <div class="col-4 center">
-                  <img class="timeline-image" src="img/2tbs.png">
+        <div class="details-label center white-text">
+          Art + Design
+        </div>
 
-                  <div class="lightgallery">
-
-                    <button href="img/art/arch-1.png" data-src="img/2tbs.png" data-sub-html="Caption" class="org-button button-2tbs">View
-                      Gallery
-                      <img class="hidden" src="img/2tbs.png">
-                    </button>
-
-                    <div class="hidden gallery-item" data-src="img/bananium-icon.png" data-sub-html="Caption">
-                      <img src="img/bananium-icon.png">
-                    </div>
-                  </div>
-
-                  <a target="_blank" href="https://2tbs.bananiumlabs.com/">
-                    <button class="org-button button-2tbs">Visit Site</button>
-                  </a>
-                </div>
-                <div class="col-8">
-                  <div class="center timeline-title">Two Terabyte Studios</div>
-                  <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
-                    Donec ultricies, magna vitae pharetra
-                    congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
-                    turpis, et malesuada mi
-                    mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
-                    imperdiet velit id
-                    lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
-                    a nulla interdum
-                    rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
-                    metus aliquam a.
-                    Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
-                    Pellentesque vitae nulla
-                    tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
-                </div>
+        <div id="art-lightgallery">
+          <div class="row art-row">
+            <div class="col-4 art-image-container center" data-src="img/art/arch-1.png" data-sub-html="Caption">
+              <img src="img/art/arch-1.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
               </div>
             </div>
-            <!-- <div class="lightgallery">
-              <a href="img/2tbs.png">
-                <img src="img/2tbs.png" />
-              </a>
-              <a href="img/bananium-icon.png">
-                <img src="img/bananium-icon.png" />
-              </a>
-            </div> -->
+            <div class="col-4 art-image-container center" data-src="img/art/11.png" data-sub-html="Caption">
+              <img src="img/art/11.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/16.jpg" data-sub-html="Caption">
+              <img src="img/art/16.jpg" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row art-row">
+            <div class="col-4 art-image-container center" data-src="img/art/stickers.jpg" data-sub-html="Caption">
+              <img src="img/art/stickers.jpg" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/06.png" data-sub-html="Caption">
+              <img src="img/art/06.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center white-background" data-src="img/profile-art.png" data-sub-html="Caption">
+              <img src="img/profile-art.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row art-row">
+            <div class="col-4 art-image-container center" data-src="img/art/powershell.jpg" data-sub-html="Caption">
+              <img src="img/art/powershell.jpg" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/15_new.png" data-sub-html="Caption">
+              <img src="img/art/15_new.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/12.png" data-sub-html="Caption">
+              <img src="img/art/12.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row art-row">
+            <div class="col-4 art-image-container center" data-src="img/art/03-upscaled.png" data-sub-html="Caption">
+              <img src="img/art/03-upscaled.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/01-smaller.png" data-sub-html="Caption">
+              <img src="img/art/01-smaller.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/4.png" data-sub-html="Caption">
+              <img src="img/art/4.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+          </div>
+          <div class="row art-row">
+            <div class="col-4 art-image-container center" data-src="img/about.svg" data-sub-html="Caption">
+              <img src="img/about.svg" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/art/drawabox.jpg" data-sub-html="Caption">
+              <img src="img/art/drawabox.jpg" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
+            <div class="col-4 art-image-container center" data-src="img/design.png" data-sub-html="Caption">
+              <img src="img/design.png" class="art-img">
+              <div class="art-hover center">
+                <i class="fas fa-search white-text fa-2x"></i>
+              </div>
+            </div>
           </div>
         </div>
+      </div>
     </div>
 
 
@@ -474,30 +528,30 @@
         </div>
       </div>
     </div>
-    </div>
+  </div>
 
-    <div id="about-modal-container">
-      <div class="code-modal about-modal center">
-        <div class="modal-title">About Me</div>
-      </div>
+  <div id="about-modal-container">
+    <div class="code-modal about-modal center">
+      <div class="modal-title">About Me</div>
     </div>
+  </div>
 
-    <div id="back-button-container">
-      <button id="back-button" class="expand-button">
-        <i class="fas fa-arrow-left fa-2x"></i>
-        <span class="expand-button-content hidden">
-          Back
-        </span>
-      </button>
-    </div>
-    <div id="close-button-container">
-      <button id="close-button" class="expand-button">
-        <i class="fas fa-times fa-2x"></i>
-        <span class="expand-button-content hidden">
-          Close
-        </span>
-      </button>
-    </div>
+  <div id="back-button-container">
+    <button id="back-button" class="expand-button">
+      <i class="fas fa-arrow-left fa-2x"></i>
+      <span class="expand-button-content hidden">
+        Back
+      </span>
+    </button>
+  </div>
+  <div id="close-button-container">
+    <button id="close-button" class="expand-button">
+      <i class="fas fa-times fa-2x"></i>
+      <span class="expand-button-content hidden">
+        Close
+      </span>
+    </button>
+  </div>
   </div>
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
