Start mobile site, 2TBS description

--- a/mobile.html
+++ b/mobile.html
@@ -1,5 +1,5 @@
 <!-- ---------------------------
-   https://bencuan.me
+   https://bencuan.me MOBILE EDITION
    © 2019 Ben Cuan - MIT License
    Created Summer 2019
 ------------------------------- -->
@@ -21,7 +21,7 @@
   <link rel="stylesheet" href="css/boilerplate.css">
   <link rel="stylesheet" href="css/simple-grid.min.css">
   <link rel="stylesheet" href="css/animations.css">
-  <link rel="stylesheet" href="css/custom.css">
+  <link rel="stylesheet" href="css/mobile.css">
   <link type="text/css" rel="stylesheet" href="js/vendor/lightGallery-1.6.12/css/lightgallery.min.css" />
 
   <!-- <link href="https://fonts.googleapis.com/css?family=Khand&display=swap" rel="stylesheet"> -->
@@ -32,6 +32,8 @@
 </head>
 
 <body>
+
+  <div id="mobile-overlay"></div>
 
   <div id="white-overlay"></div>
 
@@ -314,26 +316,19 @@
               </div>
               <div class="col-8">
                 <div class="center timeline-title">Two Terabyte Studios</div>
-                <div class="timeline-text">Two Terabyte Studios was formed in late Summer 2016 after working on the
-                  development of AtomBlast the prior year
-                  with the intent to create the first game development club at Monta
-                  Vista High School. We created
-                  four games as a club, one of which has been officially published.
-
-                  2TBS operated towards the goal of educating the community in game development through real production
-                  by producing our
-                  own games from start to finish. Over our two years of operation, we have had over 30 current and past
-                  members, over 10
-                  of whom create our core game development team with in-house artists, programmers, animators,
-                  designers, writers, and
-                  managers. While our preferred development engine is Unity,
-                  we are always open to experimentation, and have tested development through other popular engines such
-                  as Unreal Engine,
-                  Lumberyard, Godot, and GameMaker Studio.
-
-                  As the code lead, I directed the 2TBS code team and worked closely with the lead organizers to oversee
-                  weekly meetings, design implementations, and timelines.
-                </div>
+                <div class="timeline-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In a sapien metus.
+                  Donec ultricies, magna vitae pharetra
+                  congue, dui tellus bibendum dui, eget porta lectus lacus sit amet velit. Duis vulputate aliquet
+                  turpis, et malesuada mi
+                  mollis vitae. Duis nisi ligula, egestas sed faucibus sed, tempus eget neque. Suspendisse potenti. Sed
+                  imperdiet velit id
+                  lorem facilisis, quis aliquam ante lacinia. Phasellus tincidunt vehicula vulputate. Proin vitae nulla
+                  a nulla interdum
+                  rutrum. Vestibulum ut aliquet odio, ut dignissim mi. Suspendisse fermentum blandit nisl, ac facilisis
+                  metus aliquam a.
+                  Pellentesque sollicitudin ex massa, eget volutpat leo rutrum eu. Etiam eget pulvinar metus.
+                  Pellentesque vitae nulla
+                  tortor. Vivamus turpis ipsum, tempus at nibh vitae, mollis ultricies lectus.</div>
               </div>
             </div>
           </div>
@@ -1124,7 +1119,7 @@
 
   <script src="js/vendor/lightGallery-1.6.12/js/lightgallery-all.min.js"></script>
   <script type="text/javascript" src="js/vendor/jquery.lazy.min.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/mobile.js"></script>
 </footer>
 
 </html>
